Sun Dec 10 23:52:00 EET 2000  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Minor typo fixes on command reply handling on server.

Tue Nov 28 11:05:39 EET 2000  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Added silc_server_command_add_to_channel internal routine to add
	  the client to the channel after router has created the channel and
	  sent command reply to the server.

	* Added generic silc_server_send_command to send any command from
	  server.

	* Use static buffer with ID rendering instead of duplicating data.

Mon Nov 27 21:39:40 EET 2000  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Fixed a channel user mode bug when joining to a channel server gave
	  everybody channel founder rights, oops.

	* We mark ourselves as the router of the incoming server connection
	  if we are router ourselves.  This way we can check in some packet
	  sending functions whether it is locally connected server.  For
	  incoming router connections we put NULL.

	* For router sending packets locally means now always sending the
	  packet cell wide; to local clients and local servers.  For normal
	  server sending packet locally means sending it to only local
	  clients.

	* Fixed the JOIN command to really work in router environment.  If the
	  channel is created it is always created by the router.  Router is
	  also responsible of making the initial joining to the channel,
	  sending JOIN notify to the sending server and distributing 
	  NEW_CHANNEL and NEW_CHANNEL_USER packets.  Hence, if the channel
	  does not exist server doesn't do anything else but forward the
	  command to the router which performs everything.

	* Added silc_server_send_channel_key function to send the Channel Key
	  payload.

	* Added silc_server_create_channel_key to create new channel key.  The
	  channel key is now re-generated everytime someone joins or leaves
	  a channel, as protocol dictates.  Note: channel->key_len is the
	  key length in bits.
